--- a/index.html
+++ b/index.html
@@ -1,91 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>107校內技藝競賽 - 電子競技報名</title>
+    <title>107校內技藝競賽 - 電子競技報名狀態</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
     <script>
-        $(function(){
-            function getFormData($form){
+        var form = null;
+        $(function () {
+            $("#memberDiv *").hide().prop('disabled', true);
+
+            function getFormData($form) {
                 var unindexed_array = $form.serializeArray();
                 var indexed_array = {};
-                $.map(unindexed_array, function(n, i){
-                    indexed_array[n['name']] = n['value'];
+                $.map(unindexed_array, function (n, i) {
+                    if (Object.keys(indexed_array).indexOf(n['name']) == -1)
+                        indexed_array[n['name']] = n['value'];
+                    else if (indexed_array[n['name']] instanceof Array)
+                        indexed_array[n['name']].push(n['value']);
+                    else {
+                        indexed_array[n['name']] = [indexed_array[n['name']]];
+                        indexed_array[n['name']].push(n['value']);
+                    }
                 });
                 return indexed_array;
             }
-            $('#signUpForm').on('submit',function(){
-                var form = getFormData($(this));
-                $.ajax({
-                    url:'signUpProcess.php',
-                    method:'POST',
-                    data:form,
-                    success:function(result){
-                        console.log(result);
-                    },
-                    error:function(err){
-                        console.log(err);
+            $("#memberCount").change(function () {
+                var n = $(this).val();
+                $("#memberDiv *").hide().prop('disabled', true).prop('required', false);
+                $("#memberDiv *:lt(" + n * 4 + ")").show().prop('disabled', false).prop('required',
+                    true);
+            });
+            $('#signUpForm').on('submit', function () {
+                var checkFormat = true;
+                $("[name=leaderName],#memberDiv input[required]:even").each(function () {
+                    var number = parseInt(this.value);
+                    var numberLen = number.toString().length;
+                    var len = this.value.length;
+                    if (number == NaN || len - numberLen == 0) {
+                        alert("確定座號姓名的格式");
+                        checkFormat = false;
+                        return false;
                     }
-                })
+                });
+                if (!checkFormat)
+                    return false;
+                form = getFormData($(this));
+                $.ajax({
+                    url: 'signUpProcess.php',
+                    method: 'POST',
+                    data: form,
+                    success: function (result) {
+                        alert('報名成功!');
+                    },
+                    error: function (err) {
+                        alert('報名沒有成功，請重新報名或詢問電競社社長');
+                    }
+                });
                 $("#signUp").modal('hide');
                 $("#signUpForm")[0].reset();
+                $("#memberDiv *").hide().prop('disabled', true);
                 return false;
             });
         });
     </script>
 </head>
+
 <body>
     <div class="container">
-        <header>107校內技藝競賽 - 電子競技報名</header>
+        <header>107校內技藝競賽 - 電子競技報名狀態</header>
         <button class="btn btn-default" data-toggle="modal" data-target="#signUp">按我報名</button>
-        
+
     </div>
 
     <div class="modal fade" id="signUp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">電子競技報名表</h4>
-        </div>
-        <form method="POST" id="signUpForm">
-            <div class="modal-body">
-                科系
-                <select name="department" class="form-control">
-                    <option value="資料處理科">資料處理科</option>
-                    <option value="時尚造型科">時尚造型科</option>
-                    <option value="商業經營科">商業經營科</option>
-                    <option value="觀光事業科">觀光事業科</option>
-                    <option value="餐飲管理科">餐飲管理科</option>
-                    <option value="多媒體設計科">多媒體設計科</option>
-                    <option value="建教班">建教班</option>
-                    <option value="普通科">普通科</option>
-                    <option value="綜合科">綜合科</option>
-                </select>
-                班級<input type="text" class="form-control" name="_class" required>
-                隊名：<input type="text" class="form-control" name="teamName" required>
-                隊長(座號姓名)：<input type="text" class="form-control" name="leaderName" required>
-                隊長(遊戲暱稱)：<input type="text" class="form-control" name="leaderId" required>
-                隊員一(座號姓名)：<input type="text" class="form-control" name="member[]">
-                隊員二(座號姓名)：<input type="text" class="form-control" name="member[]">
-                隊員三(座號姓名)：<input type="text" class="form-control" name="member[]">
-                隊員四(座號姓名)：<input type="text" class="form-control" name="member[]">
-                候補(座號姓名)：<input type="text" class="form-control" name="member[]">
-                隊長LineID：<span style="color:red">(ID將作為修改報名表的密碼，請謹慎輸入)</span><input type="text" class="form-control" name="line_id" required>
-                隊長聯絡電話：<input type="text" class="form-control" name="phone" required>
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">電子競技報名表</h4>
+                </div>
+                <form method="POST" id="signUpForm">
+                    <div class="modal-body">
+                        科系
+                        <select name="department" class="form-control">
+                            <option value="資料處理科">資料處理科</option>
+                            <option value="時尚造型科">時尚造型科</option>
+                            <option value="商業經營科">商業經營科</option>
+                            <option value="觀光事業科">觀光事業科</option>
+                            <option value="餐飲管理科">餐飲管理科</option>
+                            <option value="多媒體設計科">多媒體設計科</option>
+                            <option value="建教班">建教班</option>
+                            <option value="普通科">普通科</option>
+                            <option value="綜合科">綜合科</option>
+                        </select>
+                        班級
+                        <input type="text" class="form-control" name="_class" required> 隊名：
+                        <input type="text" class="form-control" name="teamName" required> 隊長(座號姓名)：
+                        <input type="text" class="form-control" name="leaderName" required> 隊長(遊戲暱稱)：
+                        <input type="text" class="form-control" name="leaderId" required> 隊員數量：
+                        <select class="form-control" id="memberCount">
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5(含候補)</option>
+                        </select>
+                        <div id="memberDiv">
+                            <span>隊員一(座號姓名)：</span>
+                            <input type="text" class="form-control" name="member[]">
+                            <span>隊員一(遊戲暱稱)：</span>
+                            <input type="text" class="form-control" name="memberId[]">
+                            <span>隊員二(座號姓名)：</span>
+                            <input type="text" class="form-control" name="member[]">
+                            <span>隊員二(遊戲暱稱)：</span>
+                            <input type="text" class="form-control" name="memberId[]">
+                            <span>隊員三(座號姓名)：</span>
+                            <input type="text" class="form-control" name="member[]">
+                            <span>隊員三(遊戲暱稱)：</span>
+                            <input type="text" class="form-control" name="memberId[]">
+                            <span>隊員四(座號姓名)：</span>
+                            <input type="text" class="form-control" name="member[]">
+                            <span>隊員四(遊戲暱稱)：</span>
+                            <input type="text" class="form-control" name="memberId[]">
+                            <span>候補(座號姓名)：</span>
+                            <input type="text" class="form-control" name="member[]">
+                            <span>候補(遊戲暱稱)：</span>
+                            <input type="text" class="form-control" name="memberId[]">
+                        </div>
+                        隊長LineID：
+                        <span style="color:red">(ID將作為修改報名表的密碼，請謹慎輸入)</span>
+                        <input type="text" class="form-control" name="line_id" required> 隊長聯絡電話：
+                        <input type="text" class="form-control" name="phone" required>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">確定報名</button>
+                    </div>
+                </form>
             </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-success">確定報名</button>
-            </div>
-        </form>
         </div>
-    </div>
     </div>
 </body>
+
 </html>
