--- a/signIn.html
+++ b/signIn.html
@@ -1,22 +1,26 @@
 <div class="modal fade" id="signIn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">管理者登入</h4>
-        </div>
-        <form id="signInForm" method="post">
-            <div class="modal-body">
-                <label for="username">帳號：</label>
-                <input class="form-control" required type="text" name="username" placeholder="請輸入帳號">
-                <label for="username">密碼：</label>
-                <input class="form-control" required type="password" name="password" placeholder="請輸入密碼">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">管理者登入</h4>
+            </div>
+            <form id="signInForm" method="post">
+                <div class="modal-body">
+                    <label for="username">帳號：</label>
+                    <input class="form-control" required type="text" name="username" placeholder="請輸入帳號">
+                    <label for="username">密碼：</label>
+                    <input class="form-control" required type="password" name="password" placeholder="請輸入密碼">
 
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-success">登入</button>
-            </div>
-        </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-success">登入</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
+
+
