--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         $("#signUpBtn").before(
                             '<button class="btn btn-danger" id="logoutBtn">登出</button>');
                         $("#logoutBtn").before(
-                            '<button class="btn btn-warning" id="managerBtn">管理者專區</button>');
+                            '<a class="btn btn-warning" href="manager.php">管理者專區</a>');
                         $("#logoutBtn").click(function () {
                             $.ajax({
                                 url: 'logout.php',
@@ -209,7 +209,7 @@
                         年級班級
                         <input type="text" class="form-control" name="_class" required> 隊名：
                         <input type="text" class="form-control" name="teamName" required> 隊長(座號姓名)：
-                        <input type="text" class="form-control" name="leaderName" required> 隊長(遊戲暱稱)：
+                        <input type="text" class="form-control" name="leaderName" required> 隊長(遊戲ID)：
                         <input type="text" class="form-control" name="leaderId" required> 隊員數量：
                         <select class="form-control" id="memberCount">
                             <option value="0" selected>0</option>
