--- a/index.html
+++ b/index.html
@@ -176,6 +176,31 @@
 <body>
     <div class="container">
         <header>106校內技藝競賽 - 電子競技報名狀態</header>
+        <pre>
+
+<center style="font-size:24px;">穀保家商 106 學年度電腦技藝競賽－電子競技組 LOL 第一屆比賽規則【初賽】</center>
+一、 報名資格及時間
+1. 一個科系上限 6 隊，一個班級 1 隊(若該科有班級不派隊，可以挪給其他同科班級)，先
+搶先贏。
+2. 報名時間：107/04/12~107/04/19 下午 16:00 截止。
+3. 入選名單＆賽程公布時間：107/04/20 會加隊長 LINE 群組以及遊戲 ID 請隨時留意。
+4. 比賽時間：初賽一：107/04/21 晚上 18:00~22:00 自行約戰開始
+ （晚上 22:30 宣布晉級隊伍及一支種子隊）
+初賽二：107/04/22 晚上 18:00~22:00 自行約戰開始
+ （晚上 22:30 宣布晉級複賽隊伍）
+5. 若雙方確認約戰時間後，某方遲到超過 10 分鐘未進入房間，則遲到方棄權，請聯絡電
+競社社長 LINE 以及官方遊戲 ID。
+6. 官方遊戲 ID:穀保家商電競社
+7. 主辦單位自行抽籤。
+8. 如有問題請洽：電競社社長黃冠崴 0983796908 或者到 112 教室詢問
+資處科：取２隊
+觀光科：取２隊
+商經科：取２隊
+多媒科：取２隊
+時尚科(含建教班)：取２隊
+普通科：取１隊
+餐飲科(含建教班)：取３隊
+        </pre>
         <button class="btn btn-default" id="signUpBtn" data-toggle="modal" data-target="#signUp">按我報名</button>
         <main id="statusMain">
 
